--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href="http://www.google.com" target="_blank">open google</a> <!--สร้างลิงค์+ชื่อลิงค์ | ถ้ามีtarget คือสร้างลิงค์ใหม่ ไม่มีคือเปิดลิงค์เดิม-->
     <!--ขนาดตัวหนังสือ-->
     <h1>size</h1>
+    <h1>Whatttttttt</h1>
     <p>สอน html เบื้องต้น</p>
     ว่าซ่านนนน
     <h2>size</h2>
