add report sale

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!--ขนาดตัวหนังสือ-->
     <h1>size</h1>
     <h1>Whatttttttt</h1>
+    <h1>sale</h1>
     <p>สอน html เบื้องต้น</p>
     ว่าซ่านนนน
     <h2>size</h2>
